Translate and better stye in what-is-this view

--- a/public/public/stylesheets/what-is-this.styl
+++ b/public/public/stylesheets/what-is-this.styl
@@ -1,7 +1,45 @@
 p
-  padding-bottom .5em
   font-size 20px
-  padding-left 40px
+  padding-left 17px
+  -webkit-margin-before 0.4em
+  -webkit-margin-after 0.40em
+  text-indent 10px
+  font-family: Optima, Segoe, 'Segoe UI', Candara, Calibri, Arial, sans-serif;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 22px;
   
 #explanation
   padding-top 37px
+  padding-left 65px
+  max-width: 716px;
+  
+.h1-wrapper
+  padding-top 28px
+  
+h1 {
+  font-family: Optima, Segoe, 'Segoe UI', Candara, Calibri, Arial, sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 500;
+  line-height: 21.1199989318848px;
+}
+h3 {
+  font-family: Optima, Segoe, 'Segoe UI', Candara, Calibri, Arial, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 500;
+  line-height: 12.3199996948242px;
+}
+
+.rectangular-frame
+  float none
+  height: initial;
+  
+hr
+  border-color rgba(255, 255, 255, 0.64)
+  background-color rgba(255, 255, 255, 0.64)
+  color rgba(255, 255, 255, 0.64)
