--- a/public/views/what-is-this.jade
+++ b/public/views/what-is-this.jade
@@ -11,23 +11,61 @@ block main
   .main-left &nbsp;
   .main-center 
     #explanation
-      h1 Que es Learneet?
-      p Learneet es un sitio colaborativo de artículos científicos.
+      .h1-wrapper
+        h1 What is 
+          i learneet
+          | ?
+      hr
+      p 
+        i learneet 
+        | is a collaborative site of scientific articles.
 
-      h1 Para qué sirve?
-      p Sirve para que cualquiera pueda aprender de la manera más rápida posible ideas o conceptos científicos de nivel académico, gratuitamente. 
+      .h1-wrapper
+        h1 What's it good for?
+      hr
+      p It was created so that anyone can learn academic level ideas or concepts, the fastest way possible, for free.
 
-      h1 No existen ya sitios así, como Wikipedia?
-      p Sí, y son geniales, pero no están hechos para aprender rápido conceptos científicos. A diferencia de Wikipedia, los artículos de Learneet deben ser cortos, y solo explicar una porción de un concepto o idea.
+      .h1-wrapper
+        h1 Aren't there websites like that already, like Wikipedia?
+      hr
+      p Yes, and they are great, but most of them were not conceived to make the learning process the quickest. 
+      p Unlike Wikipedia, 
+        i learneet 
+        | articles must be short, and only explain a specific aspect of an idea or concept.
 
-      h1 Quién puede escribir artículos?
-      p Cualquiera que se haya registrado.
+      .h1-wrapper
+        h1 Who can write articles?
+      hr
+      p Any person that registered to the site.
 
-      h1 Hay algun formato para escribir un artículo?
-      p Sí, los artículos deben explicar una idea o concepto singular de forma clara y precisa. Cualquiera debería poder entenderlo.
+      .h1-wrapper
+        h1 Do articles have to follow a format?
+      hr
+      p Yes, articles should only explain an aspect of a concept, in a short and unanmbiguous way. 
+      p Anyone should be able to understand it. Even your grandma.
 
-      h1 Qué son las dependencias?
-      p Decimos que un artículo A depende de un artículo B cuando para entender el artículo A, primero tenés que entender el artículo B. 
+      .h1-wrapper
+        h1 What are 
+          i dependencies
+          | ?
+      hr
+      p We say that an article  
+        b a 
+        i depends 
+        | on the article 
+        b b 
+        | when in order to understand the article 
+        b a 
+        | you have to understand the article 
+        b b 
+        | first.
+        br
+      p Every article has a list of dependencies, and anyone can add an article as a dependency of another.
 
-      h1 Para qué sirven estas dependencias?
-      p Las dependencias nos permiten entender ideas más “complejas”. En Learneet creemos que no existen ideas difíciles de entender, sino que algunas ideas “complejas” dependen de conocer previamente otras ideas más simples.
+      .h1-wrapper
+        h1 What are these dependencies good for?
+      hr
+      p Dependencies are good for making easier to us understanding more "complex" ideas. 
+      p We state these ideas as "complex", because we believe that there is really no hard to grasp concept.
+      p You just have to understand some concepts that are more elemental first.
+      p So, understanding an article isn't really hard, you just have to understand the dependency articles.
